--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<div class="content" >
 			<h1  class="title">Hi There!</h1>
-			<h3 >We are JIGS.</h3>
+			<h3 >I am Jericho Sevilla but you can call me Ji!.</h3>
 			<h5 class="text">Our Website is currently under construction.</h5>
 			<a class="btn btn-success" style="box-shadow: 0 5px 2px rgba(0,0,0,0.3), 0 5px 30px rgba(0,0,0,0.5);" href="#Contact">See more</a>
 			
@@ -106,8 +106,8 @@
 		<div class="container">
 			
 		</div>
-		<div class="credits">JIGS Studio - 2018 &copy; www.jigs.com | All Rights Reserved.
-			<a class="credit link" href="facebook.com/jirousensei">JIGS</a>
+		<div class="credits">Loop Grounds Philippines - 2018 &copy; www.loopr.com | All Rights Reserved.
+			<a class="credit link" href="facebook.com/jirousensei">Loop Grounds Philippines</a>
 		</div> 
 	</footer>
 
