--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<div class="content" >
 			<h1  class="title">Hi There!</h1>
 			<h3 >I am Jericho Sevilla but you can call me Ji!.</h3>
-			<h5 class="text">Our Website is currently under construction.</h5>
+			<h5 class="text">
+				This Website is currently under re-construction.<br>
+				For content and cleaner website
+			</h5>
 			<a class="btn btn-success" style="box-shadow: 0 5px 2px rgba(0,0,0,0.3), 0 5px 30px rgba(0,0,0,0.5);" href="#Contact">See more</a>
 			
 		</div>
